--- a/slider.html
+++ b/slider.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="slider.css">
-    <script src="jquery-3.3.1.min.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="slider.js">
 
     </script>
