--- a/slider.html
+++ b/slider.html
@@ -1,14 +1,42 @@
-<div class="slider-wrap">
-    <div class="slider" id="slider">
-      <div class="holder">
-        <div class="slide" id="slide-0"><span class="temp">74°</span></div>
-        <div class="slide" id="slide-1"><span class="temp">64°</span></div>
-          <div class="slide" id="slide-2"><span class="temp">82°</span></div>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="slider.css">
+    <script src="jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="slider.js">
+
+    </script>
+
+
+
+
+
+
+  </head>
+  <body>
+    <div class="slider-wrap">
+        <div class="slider" id="slider">
+          <div class="holder">
+            <div class="slide" id="slide-0"><span class="temp">Tea<hr>$6 Each</span></div>
+            <div class="slide" id="slide-1"><span class="temp">Almond Butter<hr>$5 Each</span></div>
+              <div class="slide" id="slide-2"><span class="temp">Chocolate<hr>$2 Each</span></div>
+              <div class="slide" id="slide-3"><span class="temp">Truffles<hr>$10 Each</span></div>
+                <div class="slide" id="slide-4"><span class="temp">Nibs<hr>$6 Each</span></div>
+          </div>
+        </div>
+        <nav class="slider-nav">
+          <a href="#slide-0" class="active">Slide 0</a>
+          <a href="#slide-1">Slide 1</a>
+          <a href="#slide-2">Slide 2</a>
+          <a href="#slide-3">Slide 3</a>
+          <a href="#slide-4">Slide 4</a>
+        </nav>
       </div>
-    </div>
-    <nav class="slider-nav">
-      <a href="#slide-0" class="active">Slide 0</a> 
-      <a href="#slide-1">Slide 1</a> 
-      <a href="#slide-2">Slide 2</a> 
-    </nav>
-  </div>
+  </body>
+  <footer>
+
+
+  </footer>
+</html>
